// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountMenu /> should render given all props 1`] = `
<div
  className="accountIconContainer"
  onBlur={[Function]}
  tabIndex="0"
>
  <test-file-stub
    className="accountIcon"
    onClick={[Function]}
  />
  <div
    className="modal isHidden"
  >
    <div
      className="userDetails"
    >
      <img
        alt="profile"
        className="profileImg"
        src=""
      />
      <p
        className="name"
      >
        Horse
         
        Badorties
      </p>
      <p
        className="email"
      >
        horse.badorties@thefanman.com
      </p>
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={[Function]}
        priority="secondary"
        size="fitToText"
      >
        View Profile
      </Button>
    </div>
    <div
      className="link firstLinkMargin"
    >
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={[Function]}
        priority="secondaryText"
        size="small"
      >
        Help
      </Button>
    </div>
    <div
      className="link"
    >
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={[Function]}
        priority="secondaryText"
        size="small"
      >
        Sign Out
      </Button>
    </div>
  </div>
</div>
`;

exports[`<AccountMenu /> should render given no props 1`] = `
<div
  className="accountIconContainer"
  onBlur={[Function]}
  tabIndex="0"
>
  <test-file-stub
    className="accountIcon"
    onClick={null}
  />
  <div
    className="modal isHidden"
  >
    <div
      className="userDetails"
    >
      <img
        alt="profile"
        className="profileImg"
        src=""
      />
      <p
        className="name"
      >
         
      </p>
      <p
        className="email"
      />
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={null}
        priority="secondary"
        size="fitToText"
      >
        View Profile
      </Button>
    </div>
    <div
      className="link firstLinkMargin"
    >
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={null}
        priority="secondaryText"
        size="small"
      >
        Help
      </Button>
    </div>
    <div
      className="link"
    >
      <Button
        className=""
        component={null}
        disabled={false}
        href=""
        onClick={null}
        priority="secondaryText"
        size="small"
      >
        Sign Out
      </Button>
    </div>
  </div>
</div>
`;
